--- a/about.html
+++ b/about.html
@@ -1,73 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>About - Github User Breakdown</title>
-</head>
-<body>
-    <header class='header-navigation'>
-        <div class='header'>
-            <a href='index.html'><img src='images/logo.png' alt='logo'></a>
-            <h2>Github User Breakdown</h2>
-        </div>
-        <div class='search-bar'>
-            <button class='header-sign-up'><a href='signup.html'>Sign Up</a></button>
-            <button class='header-sign-in'><a href='login.html'>Log In</a></button>
-    
-            <!-- Code below used for search bar-->
-            <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
-            <button class='search-bar-btn'>Search Github</button> -->
-        </div>
+  </head>
+  <body>
+    <header class="header-navigation">
+      <div class="header">
+        <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
+        <h2>Github User Breakdown</h2>
+      </div>
+      <div class="search-bar">
+        <button class="header-sign-up">
+          <a href="signup.html">Sign Up</a>
+        </button>
+        <button class="header-sign-in"><a href="login.html">Log In</a></button>
+      </div>
     </header>
-    
+
     <div class="container about">
-        <div class="developer">
-            <div class="avatar matt"><img src="images/matt.jpeg" alt=""></div>
-            <div class="devInfo">
-                <p class="matt name">Matt Thomas</p>
-                <p class="matt user-name">MattGThomas</p>
-                <p class="matt url"><a href="https://github.com/MattGThomas">https://github.com/MattGThomas</a></p>
-            </div>
-            <div class="devBio">
-                <h2>Education:</h2>
-                <p>Lambda School :: Full Stack Software Engineer (06/2020)</p>
-                <p>Tabor College :: Biochemistry Student (Former)</p>
-                <!-- <p>NMSU :: BS Informtion and Communicaiton Technology</p> -->
-                <h2>Contact:</h2>
-                <p>Mobile: 555.123.5647</p>
-                <p>Email: matt@matt.com</p>
-            </div>
+      <div class="developer">
+        <div class="avatar matt"><img src="images/matt.jpeg" alt="" /></div>
+        <div class="devInfo">
+          <p class="matt name">Matt Thomas</p>
+          <p class="matt user-name">MattGThomas</p>
+          <p class="matt url">
+            <a href="https://github.com/MattGThomas"
+              >https://github.com/MattGThomas</a
+            >
+          </p>
         </div>
-        <div class="developer">
-            <div class="avatar zac"><img src="images/zac.jpg" alt=""></div>
-            <div class="devInfo">
-                <p class="zac name">Zac Smith</p>
-                <p class="zac user-name">zrsmith75</p>
-                <p class="zac url"><a href="https://github.com/zrsmith75">https://github.com/zrsmith75</a></p>
-            </div>
-            <div class="devBio">
-                <h2>Education:</h2>
-                <p>Lambda School :: Full Stack Software Engineer (06/2020)</p>
-                <p>CTU :: MS Cybersecurity Engineer</p>
-                <p>NMSU :: BS Informtion and Communicaiton Technology</p>
-                <h2>Contact:</h2>
-                <p>Mobile: 505.555.1234</p>
-                <p>Email: bad_dude@gmail.com</p>
-            </div>
+        <div class="devBio">
+          <h2>Education:</h2>
+          <p>Lambda School :: Full Stack Software Engineer (06/2020)</p>
+          <p>Tabor College :: Biochemistry Student (Former)</p>
+          <!-- <p>NMSU :: BS Informtion and Communicaiton Technology</p> -->
+          <h2>Contact:</h2>
+          <p>Mobile: 555.123.5647</p>
+          <p>Email: matt@matt.com</p>
         </div>
+      </div>
+      <div class="developer">
+        <div class="avatar zac"><img src="images/zac.jpg" alt="" /></div>
+        <div class="devInfo">
+          <p class="zac name">Zac Smith</p>
+          <p class="zac user-name">zrsmith75</p>
+          <p class="zac url">
+            <a href="https://github.com/zrsmith75"
+              >https://github.com/zrsmith75</a
+            >
+          </p>
+        </div>
+        <div class="devBio">
+          <h2>Education:</h2>
+          <p>Lambda School :: Full Stack Software Engineer (06/2020)</p>
+          <p>CTU :: MS Cybersecurity Engineer</p>
+          <p>NMSU :: BS Informtion and Communicaiton Technology</p>
+          <h2>Contact:</h2>
+          <p>Mobile: 505.555.1234</p>
+          <p>Email: bad_dude@gmail.com</p>
+        </div>
+      </div>
     </div>
 
-    <footer class='footer-content'>
-        <ul class='footer-content-list'>
-            <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
-
-        </ul>
-        <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
+    <footer class="footer-content">
+      <ul class="footer-content-list">
+        <li class="footer-content-item"><a href="index.html">Search</a></li>
+        <li class="footer-content-item"><a href="privacy.html">Privacy</a></li>
+        <li class="footer-content-item"><a href="terms.html">Terms</a></li>
+        <li class="footer-content-item"><a href="contact.html">Contact</a></li>
+        <li class="footer-content-item"><a href="about.html">About</a></li>
+      </ul>
+      <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
     </footer>
 
     <script src="js/aboutInfo.js" text="text/javascript"></script>
-</body>
+  </body>
 </html>
