--- a/privacy.html
+++ b/privacy.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Contact - Github User Breakdown</title>
-</head>
-<body>
-    <header class='header-navigation'>
-            <div class='header'>
-                <a href='index.html'><img src='images/logo.png' alt='logo'></a>
-                <h2>Github User Breakdown</h2>
-            </div>
-        <div class='search-bar'>
-            <button class='header-sign-up'><a href='signup.html'>Sign Up</a></button>
-            <button class='header-sign-in'><a href='login.html'>Log In</a></button>
-
-            <!-- Code below used for search bar-->
-            <!-- <input class='search-bar-input' placeholder="Enter Github User Name">
-            <button class='search-bar-btn'>Search Github</button> -->
-        </div>
+  </head>
+  <body>
+    <header class="header-navigation">
+      <div class="header">
+        <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
+        <h2>Github User Breakdown</h2>
+      </div>
+      <div class="search-bar">
+        <button class="header-sign-up">
+          <a href="signup.html">Sign Up</a>
+        </button>
+        <button class="header-sign-in"><a href="login.html">Log In</a></button>
+      </div>
     </header>
-    
+
     <div class="container">
-        <h1>GitHub Privacy Statement</h1>
-        <h3>Effective date: May 7, 2019</h3>
+      <h1>GitHub Privacy Statement</h1>
+      <h3>Effective date: May 7, 2019</h3>
 
-        <p>Thanks for entrusting GitHub with your source code, your projects, and your personal information. Holding on to your private information is a serious responsibility, and we want you to know how we're handling it.</p>
+      <p>
+        Thanks for entrusting GitHub with your source code, your projects, and
+        your personal information. Holding on to your private information is a
+        serious responsibility, and we want you to know how we're handling it.
+      </p>
 
-        <h3>The short version</h3>
-        <p>We only collect the information you choose to give us, and we process it with your consent, or on another legal basis; we only require the minimum amount of personal information that is necessary to fulfill the purpose of your interaction with us; we don't sell it to third parties; and we only use it as this Privacy Statement describes. If you're visiting us from the European Union (EU), European Economic Area (EEA), or the United Kingdom (UK), please see our global privacy practices: we comply with the EU-US Privacy Shield Framework and we are compliant with the General Data Protection Regulation (GDPR). No matter where you are, where you live, or what your citizenship is, we provide a high standard of privacy protection to all our users around the world, regardless of their country of origin or location.</p>
+      <h3>The short version</h3>
+      <p>
+        We only collect the information you choose to give us, and we process it
+        with your consent, or on another legal basis; we only require the
+        minimum amount of personal information that is necessary to fulfill the
+        purpose of your interaction with us; we don't sell it to third parties;
+        and we only use it as this Privacy Statement describes. If you're
+        visiting us from the European Union (EU), European Economic Area (EEA),
+        or the United Kingdom (UK), please see our global privacy practices: we
+        comply with the EU-US Privacy Shield Framework and we are compliant with
+        the General Data Protection Regulation (GDPR). No matter where you are,
+        where you live, or what your citizenship is, we provide a high standard
+        of privacy protection to all our users around the world, regardless of
+        their country of origin or location.
+      </p>
 
-        <p>Of course, the short version doesn't tell you everything, so <a class="url" href="https://help.github.com/en/articles/github-privacy-statement">please click on for more details</a>!</p>
-
-
+      <p>
+        Of course, the short version doesn't tell you everything, so
+        <a
+          class="url"
+          href="https://help.github.com/en/articles/github-privacy-statement"
+          >please click on for more details</a
+        >!
+      </p>
     </div>
-    <footer class='footer-content'>
-            <ul class='footer-content-list'>
-                <li class='footer-content-item'><a href='index.html'>Search</a></li><li class='footer-content-item'><a href='privacy.html'>Privacy</a></li><li class='footer-content-item'><a href='terms.html'>Terms</a></li><li class='footer-content-item'><a href='contact.html'>Contact</a></li><li class='footer-content-item'><a href='about.html'>About</a></li>
-            </ul>
-            <p class='copyright'>Copyright 2019 ThomasSmith Dev</p>
+    <footer class="footer-content">
+      <ul class="footer-content-list">
+        <li class="footer-content-item"><a href="index.html">Search</a></li>
+        <li class="footer-content-item"><a href="privacy.html">Privacy</a></li>
+        <li class="footer-content-item"><a href="terms.html">Terms</a></li>
+        <li class="footer-content-item"><a href="contact.html">Contact</a></li>
+        <li class="footer-content-item"><a href="about.html">About</a></li>
+      </ul>
+      <p class="copyright">Copyright 2019 ThomasSmith Dev</p>
     </footer>
-</body>
+  </body>
 </html>
